syntax = "proto3";

import "proto/loom.proto";

message MapEntry {
    string key = 1;
    string value = 2;
}

message HelloRequest {
    string in = 1;
}

message HelloResponse {
    string out = 1;
}

message EmbeddedBigUInt {
    BigUInt test_val = 1;
}
